chore(build): Refactor and modernize build
As a funny side-effect, bumps Log4j2 on all MC versions
because vulnerability scanners were screaming the shit
out of themselves, because Log4Shell existed, even though
we had {nolookups} in the log4j2.xml config file.

More dependencies may or may not be manually re-bumped in the future.